--- a/L5_ assignment/assignment.html
+++ b/L5_ assignment/assignment.html
@@ -3,9 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L5 Assignment</title>
+    <title>Document</title>
+    <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
+
+    <h1>Welcome to Cookie Monster</h1>
+    <p>Hey guys!</p>
     
+        <!-- Label Tag defines labels for form elements. -->
+         <!-- Label Tags are critical for Accessibility -->
+          <!-- Label elements help users click on small form elements because clicking the label text will also trigger clicking of the form element. -->
+           <!-- for attribute of the <label> tag should be equal to id attribute of the <input> element to bind them together. -->
+        <label for="fullname">Full Name: </label>
+        <!-- Every INPUT element NEEDS a name attribute. If an <input> element does not have a name element, it will NOT send any data when submitted. -->
+        <input type="text" name="fullname" id="fullname" required><br>
+        <label for="email">Email address:</label>  
+        <input type="email" id="email" name="email"><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required minlength="8" maxlength="16"><br>
+        <label for="cookies">What cookies do you want?</label>
+        <select name="cookies">
+                <option value="cookies and cream">cookies and cream</option>
+                <option value="dubai chocolate">dubai chocolate</option>
+                <option value="choclate chip">choclate chip</option>
+        </select><br><br>
+        <label for="comments">Comments:</label>
+        <textarea name="comments"></textarea><br>
+        <!-- Checkboxes allow users to select 0 or 1 or MORE from a selection. -->
+        <label for="subscribe">Subscribe?</label>
+        <input type="checkbox" name="subscribe">
+        <input type="submit">
+    </form>
+    <!-- <form> elements come with a target="" attribute to specify where to display the response that is received after submitting the form. -->
+        <!-- We'll mostly just use "_blank", but feel free to try others. -->
+    
+    <br>
+    <form target="_blank" class="long-form">
+        <h2>Choose your fav!!!</h2>
+        <!-- When it comes to Radio buttons (the circular ones), only one can be selected at once. To limit these, set the name for each radio to the SAME name, but have them differ on ID and VALUE -->
+        <input type="radio" id="html" name="fav_language" value="HTML">
+        <label for="html">sweet</label><br>
+        <input type="radio" id="css" name="fav_language" value="CSS">
+        <label for="css">sour</label><br>
+        <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+        <label for="javascript">bitter</label>
+        <br><br><input type="submit">
+    </form>
+    <h2>HTML Form action"" and method="" attributes</h2>
+    <!-- <form> action="" attribute defines the action to be performed when the form is submitted. Usually, data is sent to file on server, but when omitted, the action is set to the current page, as defined explicitly here. -->
+        <!-- We won't worry much about action="" until we get to full-stack web dev. -->
+    <!-- The method="" attribute specifies the HTTP method to be used when submitting the form data. -->
+     <!-- Typical methods are GET and POST.  -->
+    <h3>Notes on GET:</h3>
+    <p>
+        <ul>
+        <li>Appends the form data to the URL, in name/value pairs</li>
+        <li>NEVER use GET to send sensitive data! (the submitted form data is visible in the URL!)</li>
+        <li>The length of a URL is limited (2048 characters)</li>
+        <li>Useful for form submissions where a user wants to bookmark the result</li>
+        <li>GET is good for non-secure data, like query strings in Google.s</li>
+        </ul>
+    </p>
+    <h3>Notes on POST:</h3>
+    <ul>
+        <li>Appends the form data inside the body of the HTTP request (the submitted form data is not shown in the URL)</li>
+        <li>POST has no size limitations, and can be used to send large amounts of data.</li>
+        <li>Form submissions with POST cannot be bookmarked</li>
+    </ul>
+    <h3>Click submit on this form to see how a GET method submits info into the URL Stream.</h3>
+    <p>We can't do too much with POST and GET without JavaScript, but you should know the key differences listed above.</p>
+    <p>Try changing the method to post in the code to see the difference.</p>
+    <form action="./lesson.html" method="get" class="long-form">
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname" value="John"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname" value="Doe"><br><br>
+        <input type="submit" value="Submit">
+    </form>
+
+    <h2>HTML Videos</h2>
+    <p>See code for an example on how to incorporate videos.</p>
+    <p>Try changing the relative pathing to change the video.</p>
+
+    <video autoplay controls width="720" height="480">
+    <source src="./videos/coffee.mp4" type="video/mp4" />
+    </video>
+
 </body>
 </html>
