--- a/L5_ assignment/assignment.html
+++ b/L5_ assignment/assignment.html
@@ -16,11 +16,14 @@
           <!-- Label elements help users click on small form elements because clicking the label text will also trigger clicking of the form element. -->
            <!-- for attribute of the <label> tag should be equal to id attribute of the <input> element to bind them together. -->
         <label for="fullname">Full Name: </label>
+        <br>
         <!-- Every INPUT element NEEDS a name attribute. If an <input> element does not have a name element, it will NOT send any data when submitted. -->
         <input type="text" name="fullname" id="fullname" required><br>
-        <label for="email">Email address:</label>  
+        <label for="email">Email address:</label> 
+        <br> 
         <input type="email" id="email" name="email"><br>
         <label for="password">Password:</label>
+        <br>
         <input type="password" id="password" name="password" required minlength="8" maxlength="16"><br>
         <label for="cookies">What cookies do you want?</label>
         <select name="cookies">
@@ -50,44 +53,15 @@
         <label for="javascript">bitter</label>
         <br><br><input type="submit">
     </form>
-    <h2>HTML Form action"" and method="" attributes</h2>
+   
     <!-- <form> action="" attribute defines the action to be performed when the form is submitted. Usually, data is sent to file on server, but when omitted, the action is set to the current page, as defined explicitly here. -->
         <!-- We won't worry much about action="" until we get to full-stack web dev. -->
     <!-- The method="" attribute specifies the HTTP method to be used when submitting the form data. -->
-     <!-- Typical methods are GET and POST.  -->
-    <h3>Notes on GET:</h3>
-    <p>
-        <ul>
-        <li>Appends the form data to the URL, in name/value pairs</li>
-        <li>NEVER use GET to send sensitive data! (the submitted form data is visible in the URL!)</li>
-        <li>The length of a URL is limited (2048 characters)</li>
-        <li>Useful for form submissions where a user wants to bookmark the result</li>
-        <li>GET is good for non-secure data, like query strings in Google.s</li>
-        </ul>
-    </p>
-    <h3>Notes on POST:</h3>
-    <ul>
-        <li>Appends the form data inside the body of the HTTP request (the submitted form data is not shown in the URL)</li>
-        <li>POST has no size limitations, and can be used to send large amounts of data.</li>
-        <li>Form submissions with POST cannot be bookmarked</li>
-    </ul>
-    <h3>Click submit on this form to see how a GET method submits info into the URL Stream.</h3>
-    <p>We can't do too much with POST and GET without JavaScript, but you should know the key differences listed above.</p>
-    <p>Try changing the method to post in the code to see the difference.</p>
-    <form action="./lesson.html" method="get" class="long-form">
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="John"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Doe"><br><br>
-        <input type="submit" value="Submit">
-    </form>
 
-    <h2>HTML Videos</h2>
-    <p>See code for an example on how to incorporate videos.</p>
-    <p>Try changing the relative pathing to change the video.</p>
+   
 
     <video autoplay controls width="720" height="480">
-    <source src="./videos/coffee.mp4" type="video/mp4" />
+    <source src="./cookie.mp4" type="video/mp4" />
     </video>
 
 </body>
